--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@material-ui/styles": "^4.6.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-ga": "^2.7.0",
     "react-player": "^1.14.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
